--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "",
   "keywords": [],
   "author": "z9956",
+  "scripts": {
+    "prepare": "husky install"
+  },
   "dependencies": {
     "@babel/core": "^7.14.6",
     "@babel/parser": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
     "@babel/traverse": "^7.14.7"
+  },
+  "devDependencies": {
+    "husky": "^6.0.0",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1"
   }
 }
